--- a/reform_AB/templates/reform_AB/Introduction.html
+++ b/reform_AB/templates/reform_AB/Introduction.html
@@ -22,12 +22,12 @@
         Участники разбиваются на анонимные группы по 5 человек, каждый из которых получает полезность 10 единиц за период.
     </p>
 
-    В каждый период Государство инициирует реформу, которая уменьшает полезность кого-то одного из вас на 2.5 единицы, и
+    В каждый раунд правительство инициирует реформу, которая уменьшает полезность кого-то одного из вас на 2.5 единицы, и
     увеличивает полезность всех остальных на 1 единицу. Выбор того участника, которого она коснется с уменьшением полезности,
-    случаен в каждом периоде, однако каждого из вас реформа может коснуться только один раз.
+    случаен в каждом раунде, однако каждого из вас реформа может коснуться только один раз.
     <p>
-    Участники в игре принимают два решения, которые также влияют на их полезность. Первое – они независимо друг от друга
-    голосуют за проведение реформы или против него. Если против реформы проголосует большинство, она не состоится.
+    Участники в игре принимают решения, которые также влияют на их полезность. Они независимо друг от друга
+    голосуют за проведение конкретной реформы или против него. Если против каждой конкретной реформы проголосует большинство, она не состоится.
     </p>
     <!--<p>-->
     <!--<div class="solidarity">0</div><div class="solidarity">1</div><div class="solidarity">2</div><div class="solidarity">3</div><div class="solidarity">4</div><div class="solidarity">5</div>-->
@@ -39,8 +39,8 @@
     Если реформу на каком-то шаге отвергли, то игроки получают те же выигрыши, что и в предыдущем периоде, и голосуют далее за
         следующие реформы.
 
-    В самом конце все участники голосуют за поддержку всей стратегии реформ или смену власти. В первом случае все получают то что
-    полагалось по итогам реформы. Во втором случае - изначальный выигрыш, умноженный на 5 периодов.
+    В самом конце все участники голосуют за поддержку всей стратегии реформ. Если она поддержана, все получают то что
+    полагалось по итогам реформы. Во втором случае - изначальный выигрыш, умноженный на 5 периодов, за вычетом издержек.
     <!--</p>-->
 
 
