--- a/reform_AB/templates/reform_AB/PreOverthrow.html
+++ b/reform_AB/templates/reform_AB/PreOverthrow.html
@@ -6,41 +6,58 @@
 {% endblock %}
 
 {% block styles %}
-    <link href="{% static "reform/style.css" %}" rel="stylesheet">
+    <link href="{% static "reform_AB/style.css" %}" rel="stylesheet">
 {% endblock %}
 
 {% block content %}
 
     <div id="show">
+        Сейчас вы играете {{ current_round }} из {{ Constants.num_rounds }} раунд.
+
+        <b>
+        {% if reformed_previous_round == 1 %}
+             {% if total_approvals_previous_round < 3 %}
+                <p>В предыдущем раунде к вам должна была быть применена реформа, но так как её поддержали менее трёх
+                    человек, реформа применена не была.</p>
+            {% else %}
+                <p>В предыдущем раунде к вам была применена реформа, поддержанная тремя или более участниками.</p>
+            {% endif %}
+        {% endif %}
+    </b>
 
         {% if subsession.round_number != 1 %}
 
             <p>
-                В предыдущем раунде реформа была поддержана {{ total_approvals }} людьми.
+                В предыдущем раунде реформа была поддержана {{ total_approvals_previous_round }} людьми.
                 <br />
                 В предыдущем раунде ваша прибыль составила {{ player_payoff_in_previous_round }}.
                 <br />
                 За все предыдущие раунды ваша прибыль составила {{ player_payoff }}.
                 <br />
-                Сейчас вы играете {{ current_round }} из {{ Constants.num_rounds }} раунд.
             </p>
 
         {% endif %}
 
+
         {% if reformed_this_round == 1 %}
 
             <p>
-                В этот раунде реформа затронула вас, и в результате этого в каждом следующем раунде вы будете получать на {{ Constants.reform_penalty }} очков меньше, вплоть до смены режима. Каждый остальной игрок в вашей группе будет получать на {{ Constants.reform_benefits }} очков больше в каждом следующем раунде, вплоть до смены режима.
+
+                В результате реформы, предложенной в этом раунде, могут быть затронуты интересы одного из участников,
+                которые ранее затронуть не предлагалось. Если реформа будет будет принята, в каждом следующем раунде этот участник
+                будет получать на {{ Constants.reform_penalty }} единиц меньше. Каждый из оставшихся участников в вашей группе будет получать на
+                {{ Constants.reform_benefits }} единиц больше в каждом следующем раунде.
                 <br />
-                Сейчас вы играете {{ current_round }} из {{ Constants.num_rounds }} раунд.
             </p>
             <br />
         {% else %}
             <p>
-                В этом раунде раформа вас не затронула -- другой игрок был реформирован, и в результате этого в
-                каждом следующем раунде он будет получать на {{ Constants.reform_penalty }} баллов меньше, вплоть до смены режима. Каждый остальной игрок в вашей группе, включая вас, будет получать на {{ Constants.reform_benefits }} баллов больше в каждом следующем раунде, вплоть до смены режима.
+{#                Реформа, предложенная в этом раунде, не затрагивает вас -- реформирован будет другой участник, и в результате этого в#}
+                В результате реформы, предложенной в этом раунде, могут быть затронуты интересы одного из участников,
+                которые ранее затронуть не предлагалось. Если реформа будет будет принята, в каждом следующем раунде он будет
+                получать на {{ Constants.reform_penalty }} единиц меньше. Каждый из остальных участников в вашей группе
+                будет получать на {{ Constants.reform_benefits }} единиц больше в каждом следующем раунде.
                 <br />
-                Сейчас вы играете {{ current_round }} из {{ Constants.num_rounds }} раунд.
             </p>
             <br>
         {% endif %}
@@ -48,14 +65,16 @@
         <a href="#show" id="open"><div class="btn btn-primary btn-large">Далее</div></a>
         <div id="content">
 
-            <!--<p>-->
-                <!--Пожалуйста решите, поддерживаете ли вы реформу, в этом раунде. Поддержка стоит {{ Constants.approval_cost }} очка.-->
-            <!--</p>-->
+{#            <!--<p>-->#}
+{#                <!--Пожалуйста решите, поддерживаете ли вы реформу, в этом раунде. Поддержка стоит {{ Constants.approval_cost }} очка.-->#}
+{#            <!--</p>-->#}
 
-            {% formfield player.approval with label="Одобряете ли вы эту реформу?" %}
+            {% formfield player.approval with label="Одобряете ли вы текущую реформу?" %}
             <br>
             <p>
-                Вы можете одобрить или нет стратегию реформ в целом, двигая слайдер от 1 (совсем не одобряю) до 5 (полностью одобряю).
+                Вы можете одобрить или нет стратегию реформ в целом, двигая слайдер от 0 (крайне не одобряю) до 5 (полностью одобряю).
+                Эта информация ничего вам не стоит, и не влияет на ход реформ - просто выразите свое отношение.
+                Пожалуйста, обязательно сдвиньте слайдер - даже если вы хотите оставить его на исходной позиции.
             </p>
 
             {% formfield player.vote_to_overthrow with label="" %}
